dev/scss/_about-us.scss
@use "variables" as *;
@use "variables-mike" as *;
@use "mixins-mike" as *;


@include mq-mobile ($mobile){
    .about-us-image {
        background-image: url(../images/bg-section-about-us.jpg);
        padding: 4.25rem 0;
        background-position: center;
    }
    .about-us-text {
        text-align: center;
        color: #fff;
        p{
        padding: 3rem 0;
        max-width: 15rem;
        margin-left: auto;
        margin-right: auto;
        }
        h2{
            color: #fff;

        }
    }
}
@include mq-tablet ($mid) {
    .about-us-image {
        background-image: url(../images/bg-section-about-us.jpg);
        padding: 8rem 0;
        background-position: center;
    }

.about-us-text {
    text-align: center;
    color: #fff;
    p{
    padding: 4rem 0;
    max-width: 26rem;
    margin-left: auto;
    margin-right: auto;
    font-size: .9rem;
    }
    h2{
        color: #fff;

    }
}
}

@include mq-desktop($desktop) {
    .about-us-text {
        p{
            max-width: 41rem;
            margin-left: auto;
            margin-right: auto;
            font-size: .85rem;
        }
        h2{
            max-width: 45rem;
            line-height: 1.25;
            margin-left: auto;
            margin-right: auto;
            font-size: 3rem;
        }
    }
}

